// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`xmlmap.sql > line 1 1`] = `
[
  "CREATE SCHEMA testxmlschema",
  {
    "stmts": [
      {
        "stmt": {
          "CreateSchemaStmt": {
            "schemaname": "testxmlschema",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`xmlmap.sql > line 3 1`] = `
[
  "CREATE TABLE testxmlschema.test1 (a int, b text)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "test1",
              "relpersistence": "p",
              "schemaname": "testxmlschema",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 34,
                  "typeName": {
                    "location": 36,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "b",
                  "is_local": true,
                  "location": 41,
                  "typeName": {
                    "location": 43,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`xmlmap.sql > line 16 1`] = `
[
  "SELECT table_to_xml('testxmlschema.test1', false, false, '')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 20,
                            "sval": {
                              "sval": "testxmlschema.test1",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "boolval": {},
                            "location": 43,
                          },
                        },
                        {
                          "A_Const": {
                            "boolval": {},
                            "location": 50,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 57,
                            "sval": {
                              "sval": "",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "table_to_xml",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`xmlmap.sql > line 22 1`] = `
[
  "SELECT table_to_xmlschema('testxmlschema.test1', false, false, '')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 26,
                            "sval": {
                              "sval": "testxmlschema.test1",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "boolval": {},
                            "location": 49,
                          },
                        },
                        {
                          "A_Const": {
                            "boolval": {},
                            "location": 56,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 63,
                            "sval": {
                              "sval": "",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "table_to_xmlschema",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`xmlmap.sql > line 28 1`] = `
[
  "SELECT table_to_xml_and_xmlschema('testxmlschema.test1', false, false, '')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 34,
                            "sval": {
                              "sval": "testxmlschema.test1",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "boolval": {},
                            "location": 57,
                          },
                        },
                        {
                          "A_Const": {
                            "boolval": {},
                            "location": 64,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 71,
                            "sval": {
                              "sval": "",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "table_to_xml_and_xmlschema",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`xmlmap.sql > line 33 1`] = `
[
  "SELECT query_to_xml('SELECT * FROM testxmlschema.test1', false, false, '')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 20,
                            "sval": {
                              "sval": "SELECT * FROM testxmlschema.test1",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "boolval": {},
                            "location": 57,
                          },
                        },
                        {
                          "A_Const": {
                            "boolval": {},
                            "location": 64,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 71,
                            "sval": {
                              "sval": "",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "query_to_xml",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`xmlmap.sql > line 37 1`] = `
[
  "DECLARE xc CURSOR WITH HOLD FOR SELECT * FROM testxmlschema.test1 ORDER BY 1, 2",
  {
    "stmts": [
      {
        "stmt": {
          "DeclareCursorStmt": {
            "options": 288,
            "portalname": "xc",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 46,
                      "relname": "test1",
                      "relpersistence": "p",
                      "schemaname": "testxmlschema",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "sortClause": [
                  {
                    "SortBy": {
                      "location": -1,
                      "node": {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 75,
                        },
                      },
                      "sortby_dir": "SORTBY_DEFAULT",
                      "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                    },
                  },
                  {
                    "SortBy": {
                      "location": -1,
                      "node": {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 78,
                        },
                      },
                      "sortby_dir": "SORTBY_DEFAULT",
                      "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                    },
                  },
                ],
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 39,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 39,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`xmlmap.sql > line 44 1`] = `
[
  "SELECT schema_to_xml('testxmlschema', false, true, '')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 21,
                            "sval": {
                              "sval": "testxmlschema",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "boolval": {},
                            "location": 38,
                          },
                        },
                        {
                          "A_Const": {
                            "boolval": {
                              "boolval": true,
                            },
                            "location": 45,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 51,
                            "sval": {
                              "sval": "",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "schema_to_xml",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`xmlmap.sql > line 56 1`] = `
[
  "CREATE TABLE testxmlschema.test3
    AS SELECT true c1,
              true::testboolxmldomain c2,
              '2013-02-21'::date c3,
              '2013-02-21'::testdatexmldomain c4",
  {
    "stmts": [
      {
        "stmt": {
          "CreateTableAsStmt": {
            "into": {
              "onCommit": "ONCOMMIT_NOOP",
              "rel": {
                "inh": true,
                "location": 13,
                "relname": "test3",
                "relpersistence": "p",
                "schemaname": "testxmlschema",
              },
            },
            "objtype": "OBJECT_TABLE",
            "query": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 47,
                      "name": "c1",
                      "val": {
                        "A_Const": {
                          "boolval": {
                            "boolval": true,
                          },
                          "location": 47,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 70,
                      "name": "c2",
                      "val": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "boolval": {
                                "boolval": true,
                              },
                              "location": 70,
                            },
                          },
                          "location": 74,
                          "typeName": {
                            "location": 76,
                            "names": [
                              {
                                "String": {
                                  "sval": "testboolxmldomain",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 112,
                      "name": "c3",
                      "val": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 112,
                              "sval": {
                                "sval": "2013-02-21",
                              },
                            },
                          },
                          "location": 124,
                          "typeName": {
                            "location": 126,
                            "names": [
                              {
                                "String": {
                                  "sval": "date",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 149,
                      "name": "c4",
                      "val": {
                        "TypeCast": {
                          "arg": {
                            "A_Const": {
                              "location": 149,
                              "sval": {
                                "sval": "2013-02-21",
                              },
                            },
                          },
                          "location": 161,
                          "typeName": {
                            "location": 163,
                            "names": [
                              {
                                "String": {
                                  "sval": "testdatexmldomain",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`xmlmap.sql > line 62 1`] = `
[
  "SELECT xmlforest(c1, c2, c3, c4) FROM testxmlschema.test3",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 38,
                  "relname": "test3",
                  "relpersistence": "p",
                  "schemaname": "testxmlschema",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "XmlExpr": {
                      "location": 7,
                      "named_args": [
                        {
                          "ResTarget": {
                            "location": 17,
                            "val": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "c1",
                                    },
                                  },
                                ],
                                "location": 17,
                              },
                            },
                          },
                        },
                        {
                          "ResTarget": {
                            "location": 21,
                            "val": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "c2",
                                    },
                                  },
                                ],
                                "location": 21,
                              },
                            },
                          },
                        },
                        {
                          "ResTarget": {
                            "location": 25,
                            "val": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "c3",
                                    },
                                  },
                                ],
                                "location": 25,
                              },
                            },
                          },
                        },
                        {
                          "ResTarget": {
                            "location": 29,
                            "val": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "c4",
                                    },
                                  },
                                ],
                                "location": 29,
                              },
                            },
                          },
                        },
                      ],
                      "op": "IS_XMLFOREST",
                      "xmloption": "XMLOPTION_DOCUMENT",
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
